--- a/WcfServiceLibrary1/App.config
+++ b/WcfServiceLibrary1/App.config
@@ -1,63 +1,34 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
+  
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=APOLLO-PS\SQLEXPRESS;Initial Catalog=BaseDevice; user id=user;password=Asdfg123"/>
+  </connectionStrings>
+  
   <system.web>
     <compilation debug="true" />
   </system.web>
-  <!-- When deploying the service library project, the content of the config file must be added to the host's 
-  app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding_IService1" />
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="http://localhost:8080/"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
-        contract="WcfServiceLibrary1.IService1" name="BasicHttpBinding_IService1" />
-    </client>
     <services>
-      <service name="WcfServiceLibrary1.Service1">
+      <service name="WcfProduct.ServiceProduct" behaviorConfiguration="mexBehaver">
+        <endpoint address="WcfProduct.ServiceProduct." binding="basicHttpBinding" contract="WcfProduct.IServiceProduct"></endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" ></endpoint>
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8080/"   />
+            <add baseAddress="http://Localhost:8080/" />
           </baseAddresses>
         </host>
-        <!-- Service Endpoints -->
-        <!-- Unless fully qualified, address is relative to base address supplied above -->
-        <endpoint address="" binding="basicHttpBinding" contract="WcfServiceLibrary1.IService1">
-          <!-- 
-              Upon deployment, the following identity element should be removed or replaced to reflect the 
-              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
-              automatically.
-          -->
-          <identity>
-            <dns value="localhost"/>
-          </identity>
-        </endpoint>
-        <!-- Metadata Endpoints -->
-        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
-        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, 
-          set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
-          <!-- To receive exception details in faults for debugging purposes, 
-          set the value below to true.  Set to false before deployment 
-          to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
+        <behavior name="mexBehaver">
+          <serviceMetadata httpGetEnabled="true"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
-
 </configuration>
