--- a/products/App.config
+++ b/products/App.config
@@ -1,18 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=APOLLO-PS\SQLEXPRESS;Initial Catalog=BaseDevice; user id=user;password=Asdfg123"/>
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <system.serviceModel>
         <bindings>
               <basicHttpBinding>
-                    <binding name="BasicHttpBinding_IService1" />
+                    <binding name="BasicHttpBinding_IServiceProduct" />
               </basicHttpBinding>
         </bindings>
         <client>
-              <endpoint address="http://localhost:8080/" binding="basicHttpBinding"
-                    bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceReference1.IService1"
-                    name="BasicHttpBinding_IService1" />
+              <endpoint address="http://localhost:8080/WcfProduct.ServiceProduct."
+                    binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceProduct"
+                    contract="WCFProduct.IServiceProduct" name="BasicHttpBinding_IServiceProduct" />
         </client>
     </system.serviceModel>
 </configuration>
